infra/k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoring-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoring-service
  template:
    metadata:
      labels:
        app: scoring-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: scoring-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/scoring-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: scoring-service
  namespace: trading-devops
spec:
  selector:
    app: scoring-service
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batch-service
  template:
    metadata:
      labels:
        app: batch-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: batch-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/batch-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: batch-service
  namespace: trading-devops
spec:
  selector:
    app: batch-service
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: frontend-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/frontend-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: trading-devops
spec:
  type: LoadBalancer
  selector:
    app: frontend-service
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screening-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: screening-service
  template:
    metadata:
      labels:
        app: screening-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8005"
    spec:
      containers:
        - name: screening-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/screening-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: screening-service
  namespace: trading-devops
spec:
  selector:
    app: screening-service
  ports:
    - port: 8005
      targetPort: 8005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-service
  template:
    metadata:
      labels:
        app: portfolio-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8003"
    spec:
      containers:
        - name: portfolio-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/portfolio-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: trading-devops
spec:
  selector:
    app: portfolio-service
  ports:
    - port: 8003
      targetPort: 8003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-service
  template:
    metadata:
      labels:
        app: risk-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8004"
    spec:
      containers:
        - name: risk-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/risk-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: risk-service
  namespace: trading-devops
spec:
  selector:
    app: risk-service
  ports:
    - port: 8004
      targetPort: 8004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: trading-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8006"
    spec:
      containers:
        - name: notification-service
          image: 951151047337.dkr.ecr.ap-south-1.amazonaws.com/trading-devops/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: trading-devops
spec:
  selector:
    app: notification-service
  ports:
    - port: 8006
      targetPort: 8006
